crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@arrow.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/arrow.input
---
Input: a -> b -> c

Start { kind: ArrowType }
  Start { kind: VariableType }
    Start { kind: NameRef }
      Token { kind: Lower }
    Finish
  Finish
  Token { kind: RightArrow }
  Start { kind: ArrowType }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
    Token { kind: RightArrow }
    Start { kind: VariableType }
      Start { kind: NameRef }
        Token { kind: Lower }
      Finish
    Finish
  Finish
Finish

