crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@case_with_underscore.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/case_with_underscore.input
---
Input: case _ of
  [] -> []

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: CaseExpression }
        Token { kind: CaseKw }
        Start { kind: Separated }
          Start { kind: ExpressionOperatorChain }
            Start { kind: ExpressionInfixChain }
              Start { kind: ApplicationExpression }
                Start { kind: SectionExpression }
                  Token { kind: Underscore }
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Start { kind: OneOrMore }
            Finish
          Finish
        Finish
        Token { kind: OfKw }
        Token { kind: LayoutStart }
        Start { kind: OneOrMore }
          Start { kind: CaseBranch }
            Start { kind: Separated }
              Start { kind: BinderOperatorChain }
                Start { kind: LiteralBinder }
                  Start { kind: LiteralArray }
                    Start { kind: Wrapped }
                      Token { kind: LeftSquare }
                      Token { kind: RightSquare }
                    Finish
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
            Finish
            Token { kind: RightArrow }
            Start { kind: WhereExpression }
              Start { kind: ExpressionOperatorChain }
                Start { kind: ExpressionInfixChain }
                  Start { kind: ApplicationExpression }
                    Start { kind: LiteralExpression }
                      Start { kind: LiteralArray }
                        Start { kind: Wrapped }
                          Token { kind: LeftSquare }
                          Token { kind: RightSquare }
                        Finish
                      Finish
                    Finish
                    Start { kind: OneOrMore }
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
            Finish
          Finish
        Finish
        Token { kind: LayoutEnd }
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
