crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@constrained.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/constrained.input
---
Input: A => B => a

Start { kind: TypeOperatorChain }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: Pair }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
      Finish
      Start { kind: ConstructorType }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
    Start { kind: Pair }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
      Finish
      Start { kind: VariableType }
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
Finish
