crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@do-bind.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/do-bind.input
---
Input: do
  a <- b
  Tuple c d <- e

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: DoExpression }
        Start { kind: QualifiedDo }
          Token { kind: DoKw }
        Finish
        Token { kind: LayoutStart }
        Start { kind: OneOrMore }
          Start { kind: DoBind }
            Start { kind: BinderOperatorChain }
              Start { kind: VariableBinder }
                Start { kind: Name }
                  Token { kind: Lower }
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Token { kind: LeftArrow }
            Start { kind: ExpressionOperatorChain }
              Start { kind: ExpressionInfixChain }
                Start { kind: ApplicationExpression }
                  Start { kind: VariableExpression }
                    Start { kind: QualifiedName }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
          Finish
          Token { kind: LayoutSep }
          Start { kind: DoBind }
            Start { kind: BinderOperatorChain }
              Start { kind: ConstructorBinder }
                Start { kind: QualifiedName }
                  Start { kind: NameRef }
                    Token { kind: Upper }
                  Finish
                Finish
                Start { kind: OneOrMore }
                  Start { kind: VariableBinder }
                    Start { kind: Name }
                      Token { kind: Lower }
                    Finish
                  Finish
                  Start { kind: VariableBinder }
                    Start { kind: Name }
                      Token { kind: Lower }
                    Finish
                  Finish
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
            Token { kind: LeftArrow }
            Start { kind: ExpressionOperatorChain }
              Start { kind: ExpressionInfixChain }
                Start { kind: ApplicationExpression }
                  Start { kind: VariableExpression }
                    Start { kind: QualifiedName }
                      Start { kind: NameRef }
                        Token { kind: Lower }
                      Finish
                    Finish
                  Finish
                  Start { kind: OneOrMore }
                  Finish
                Finish
                Start { kind: OneOrMore }
                Finish
              Finish
              Start { kind: OneOrMore }
              Finish
            Finish
          Finish
        Finish
        Token { kind: LayoutEnd }
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
